<resources>
	<string name="app_name">SnapMD</string>
	<string name="title_activity_login">Login</string>

	<string name="login_url_label">CodiMD URL:</string>
	<string name="login_url_hint">https://my.codimd.instance/</string>
	<string name="login_mail_label">Mail:</string>
	<string name="login_mail_hint">my.mail@address.com</string>
	<string name="login_password_label">Password:</string>
	<string name="login_button">Login</string>

	<string name="action_logout">Log out</string>
</resources>
