<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="@dimen/padding"
	tools:context="de.claudiuscoenen.snapmd.login.LoginActivityFragment">

	<TextView
		android:id="@+id/label_url"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:labelFor="@id/input_url"
		android:text="@string/login_url_label" />

	<EditText
		android:id="@+id/input_url"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/login_url_hint"
		android:inputType="textUri"
		app:layout_constraintTop_toBottomOf="@id/label_url" />

	<TextView
		android:id="@+id/label_mail"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:labelFor="@id/input_mail"
		android:text="@string/login_mail_label"
		app:layout_constraintTop_toBottomOf="@id/input_url" />

	<EditText
		android:id="@+id/input_mail"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/login_mail_hint"
		android:inputType="textEmailAddress"
		app:layout_constraintTop_toBottomOf="@id/label_mail" />

	<TextView
		android:id="@+id/label_password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:labelFor="@id/input_password"
		android:text="@string/login_password_label"
		app:layout_constraintTop_toBottomOf="@id/input_mail" />

	<EditText
		android:id="@+id/input_password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textPassword"
		app:layout_constraintTop_toBottomOf="@id/label_password" />

	<Button
		android:id="@+id/btn_login"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/login_button"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
